<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/abc_primary_text_material_light"
            android:text="@string/rd_every"/>

        <com.rey.material.widget.EditText
            style="@style/Material.Widget.EditText.Light"
            android:id="@+id/rd_et_freq"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            app:et_labelEnable="false"
            tools:text="1"/>

        <TextView
            android:id="@+id/rd_tv_freq_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/abc_primary_text_material_light"
            tools:text="@string/rd_day"/>

    </LinearLayout>

    <com.rey.material.widget.RadioButton
        style="@style/Material.Drawable.RadioButton"
        android:id="@+id/rd_month_cb_same"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/abc_primary_text_material_light"
        android:text="@string/rd_month_same_day"
        android:gravity="center_vertical"
        android:checked="true"/>

    <com.rey.material.widget.RadioButton
        style="@style/Material.Drawable.RadioButton"
        android:id="@+id/rd_month_cb_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/abc_primary_text_material_light"
        tools:text="@string/rd_month_last"
        android:gravity="center_vertical"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <com.rey.material.widget.Spinner
            style="@style/Material.Widget.Spinner"
            android:id="@+id/rd_spn_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="72dp"
            app:ripple="@style/Material.Drawable.Ripple.Touch.Light"
            app:delayClick="true"/>

        <com.rey.material.widget.EditText
            style="@style/Material.Widget.EditText.Light"
            android:id="@+id/rd_et_end_num"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            app:et_labelEnable="false"
            tools:text="1"/>

        <TextView
            android:id="@+id/rd_tv_end_num_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/abc_primary_text_material_light"
            tools:text="@string/rd_event"/>

        <com.rey.material.widget.Button
            android:id="@+id/rd_bt_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ripple="@style/Material.Drawable.Ripple.Wave.Light"
            app:delayClick="false"
            tools:text="12/01/2015"
            android:layout_marginLeft="8dp"/>

    </LinearLayout>

</LinearLayout>
